# demonstrative_examples_architectural_good_practices

./: .gitignore  README.md  pyproject.toml
checks/: check_export_sylphy.ipynb  checking_validators.ipynb  checks_imports.ipynb  working_with_api.ipynb
demonstrative_applications/case_demo_01/clusters_k100/: cluster_schema.yaml  labels.csv
demonstrative_applications/case_demo_01/clusters_k200/: cluster_schema.yaml  labels.csv
demonstrative_applications/case_demo_01/clusters_k300/: labels.csv  (+1 more)
docs/: minimal_adoption.md  philosophy.md  schema_reference.md
examples/: dataset.yaml  embedding.yaml  execution_gpu.yaml  split.yaml  train_classification.yaml  train_regression.yaml
mcs/: __init__.py  api.py  version.py
mcs/provenance/: __init__.py  lineage.py  record.py
mcs/registry/: __init__.py  local.py
mcs/schemas/: __init__.py  dataset.py  embedding.py  execution.py  split.py  train.py
mcs/validation/: __init__.py  api.py  consistency.py  dataset_validator.py  embedding_validator.py  execution_validator.py  split_validator.py  train_validator.py  types.py
notebooks/: 00_quickstart.ipynb  MCS_analysis_use_case.ipynb  tmp.csv
notebooks/case_use_01/: MCS_02_generate_split_pools.ipynb  MCS_05_case01_analysis.ipynb  MCS_AMP_dataset_builder.ipynb  mcs_03_embed_split_pools.py  mcs_04_train_models_split_pools_v1.py  mcs_04_train_rf_split_pools.py  running_all_training.sh
notebooks/case_use_02/: mcs_03_embed_split_pools.py  mcs_06_similarity_graph.py  mcs_07_cluster_aware_split.py
tests/: test_examples_validate.py  test_imports.py  test_run_pack_registry.py
(+410 files in other folders)
