[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-community-standard"
version = "0.1.0"
description = "Minimal Community Standard (MCS) v0.1 for verifiable protein ML workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "KrenAI-Lab", email = "krenai@umag.cl" }
]
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcs*"]
exclude = ["notebooks*", "examples*", "docs*", "tests*"]

[project.urls]
Repository = "https://github.com/kren-ai-lab/MinimalCommunityStandar_v0.1"
